[package]
name = "lazy-git"
version = "0.1.0"
edition = "2021"

[lib]
name = "lib"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.14", features = ["derive"] }
confy = "0.6.1"
regex = "1.10.6"
serde = "1.0.210"
serde_derive = "1.0.210"

[[bin]]
name = "lg"
path = "src/main.rs"
